add repo for java and kotlin

--- a/firestoreassistant/build.gradle
+++ b/firestoreassistant/build.gradle
@@ -31,8 +31,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.0.1'
 
-    // Firebase
+    // Firestore
     implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.google.firebase:firebase-firestore:21.3.1'
 
