--- a/firestoreassistant/src/main/AndroidManifest.xml
+++ b/firestoreassistant/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.firebase.mark42.firestoreassistant" />
+    package="com.sach.mark42.firestoreassistant" />
